--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -23,4 +23,4 @@ jobs:
       - name: Echo a string
         run: Write-Output "Windows string"
       - name: Error Step
-        run: doesnotexist
+        run: doesnotexistsdf
