--- a/.github/workflows/workflow-commands.yaml
+++ b/.github/workflows/workflow-commands.yaml
@@ -8,13 +8,13 @@ jobs:
       - name: Setting an error message
         run: echo "::error::Missing semicolon"
       - name: Setting an error message with parameters
-        run: echo "::error title=Error title,file:app.js, line=7,endLine=9,col=11,endColkumn=12::Missing semicolon"
+        run: echo "::error title=Error title,file=app.js, line=7,endLine=9,col=11,endColkumn=12::Missing semicolon"
       - name: Setting a debug message with parameters
-        run: echo "::debug title=Debut title,file:app.js, line=7,endLine=9,col=11,endColkumn=12::Missing semicolon"
+        run: echo "::debug title=Debut title,file=app.js, line=7,endLine=9,col=11,endColkumn=12::Missing semicolon"
       - name: Setting a warning message with parameters
-        run: echo "::warning title=Warning title,file:app.js, line=7,endLine=9,col=11,endColkumn=12::Missing semicolon"
+        run: echo "::warning title=Warning title,file=app.js, line=7,endLine=9,col=11,endColkumn=12::Missing semicolon"
       - name: Setting a notice message with parameters
-        run: echo "::notice title=Notice title,file:app.js, line=7,endLine=9,col=11,endColkumn=12::Missing semicolon"
+        run: echo "::notice title=Notice title,file=app.js, line=7,endLine=9,col=11,endColkumn=12::Missing semicolon"
       - name: Group of logs
         run: |
           echo "::group::My group title"
