--- a/.github/workflows/events.yaml
+++ b/.github/workflows/events.yaml
@@ -8,14 +8,14 @@ on:
       - "!feature/featA" # excludes the branch "feature/featA"
     # branches-ignore:
     #   - develop
-    tags:
-      - v1.* # matches any tag that starts with "v1."
-      - "!v1.1.1"
+    #tags:
+    #  - v1.* # matches any tag that starts with "v1."
+    #  - "!v1.1.1"
     # tags-ignore:
     #   - v2.*
-    paths:
-      - "**.js" # matches any JavaScript file in the repository
-      - "!docs/**" # excludes any file in the "docs" directory
+    #paths:
+    #  - "**.js" # matches any JavaScript file in the repository
+    #  - "!docs/**" # excludes any file in the "docs" directory
 
   pull_request: 
     types: [opened, assigned, reopened, synchronize]
