--- a/.github/workflows/manually-triggered.yaml
+++ b/.github/workflows/manually-triggered.yaml
@@ -32,4 +32,11 @@ jobs:
   log-info:
     runs-on: ubuntu-latest
     steps:
-      - run: echo $GITHUB_REF
+      - run: echo $GITHUB_REF    
+      - run: |           
+            echo "String: ${{ inputs.string }}"
+            echo "Number: ${{ inputs.number }}"
+            echo "Option: ${{ inputs.option }}"
+            echo "Boolean: ${{ inputs.boolean }}"
+            echo "Environment: ${{ inputs.environment }}"
+      
