--- a/.github/workflows/expressions-and-contexts.yaml
+++ b/.github/workflows/expressions-and-contexts.yaml
@@ -21,5 +21,6 @@ jobs:
         run: |
             echo '${{ toJson(github)}}'
             echo "${{ toJson(job)}}"
+            echo "${{ toJson(secrets)}}"
             echo '${{ toJson(steps)}}'
             echo '${{ toJson(runner)}}'
