--- a/.github/workflows/expressions-and-contexts.yaml
+++ b/.github/workflows/expressions-and-contexts.yaml
@@ -3,6 +3,14 @@ on: [push, pull_request, issues, workflow_dispatch]
 run-name: "Expressions & Contexts by ${{ github.actor}}, event: ${{ github.event_name }}"
 
 jobs:
+  runs-on-issues-and-prs:
+    runs-on: ubuntu-latest
+    if: contains(fromJson('["issues", "pull_request"]'), github.event_name)
+    steps:
+      - name: Run only if issue is a bug
+        # the labels.*.name syntax extracts the names of all labels on the issue so we end up with an array of label names instead of label objects
+        if: contains(github.event.issue.labels.*.name, 'bug') 
+        run: echo ${{ join(github.event.issue.labels.*.name, ', ') }} # prints all labels on the issue
   using-expressions-and-contexts:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' }}
