--- a/.github/workflows/status-check.yaml
+++ b/.github/workflows/status-check.yaml
@@ -7,11 +7,12 @@ jobs:
     steps:
       - name: Step 1
         run: sleep 20
-      - name: fail
+      - name: Step 2
+        id: step-2
         run: exit 1
       - name: Runs on Failure
-        if: failure()
-        run: echo "Runs only on failure"
+        if: steps.step-2.conclusion == 'failure'        
+        run: echo "Runs only if step 2 has failed"
       - name: Runs on Success
         # this is not needed because it is the default behavior
         if: success() 
