--- a/.github/workflows/env-vars.yaml
+++ b/.github/workflows/env-vars.yaml
@@ -23,6 +23,14 @@ jobs:
         run: |
           echo "NEW_ENV_VAR=$(date)" >> $GITHUB_ENV
           echo "JOB_LEVEL_ENV=$RANDOM" >> $GITHUB_ENV
+      - name: Multiline Env Var
+        run: |
+          DELIMITER=$RANDOM
+          echo "RANDOM_JOKE<<$DELIMITER" >> $GITHUB_ENV
+          echo "Here is a joke" >> $GITHUB_ENV
+          curl -s https://icanhazdadjoke.com/ >> $GITHUB_ENV
+          echo "" >> $GITHUB_ENV
+          echo "$DELIMITER" >> $GITHUB_ENV
       - name: Log Custom Env Vars
         env: 
           STEP_LEVEL_ENV: Available to this step only
@@ -33,4 +41,5 @@ jobs:
           echo $JOB_LEVEL_ENV
           echo $WF_LEVEL_ENV
           echo $NEW_ENV_VAR
+          echo $RANDOM_JOKE
           
