--- a/.github/workflows/vars-and-secrets.yaml
+++ b/.github/workflows/vars-and-secrets.yaml
@@ -18,4 +18,4 @@ jobs:
           echo "${{ vars.JOBS_RUNNER }}"
           echo "ORG_LEVEL_VAR: $ORG_LEVEL_VAR"
           echo "REPO_LEVEL_VAR: $REPO_LEVEL_VAR"
-          echo "ENV: $ENV_LEVEL_VAR"
+          echo "ENV_LEVEL_VAR: $ENV_LEVEL_VAR"
