--- a/.github/workflows/status-check.yaml
+++ b/.github/workflows/status-check.yaml
@@ -9,9 +9,13 @@ jobs:
         run: sleep 20
       - name: Step 2
         id: step-2
+        continue-on-error: true
         run: exit 1
+      - name: Runs on step 2 Failure
+        if: failure() && steps.step-2.conclusion == 'failure'
+        run: echo "Runs only if step 2 has failed"
       - name: Runs on Failure
-        if: failure() && steps.step-2.conclusion == 'failure'        
+        if: failure() 
         run: echo "Runs only if step 2 has failed"
       - name: Runs on Success
         # this is not needed because it is the default behavior
