--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -2,11 +2,12 @@ name: Matrix
 on: [push]
 
 jobs:
-  node-matrix:
-    runs-on: unbuntu-latest
+  node-matrix:    
     strategy:
       matrix:
         node-version: [14, 15 ,16]
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - run: node -v
       - uses: actions/setup-node@v3
