--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -13,7 +13,7 @@ on: [push]
 
 jobs:
   node-matrix:
-    continue-on-error: false
+    continue-on-error: ${{ matrix.experimental == true }}
     strategy:
       matrix:
         node-version: [14, 15 ,16]
