--- a/.github/workflows/dynamic-matrix.yaml
+++ b/.github/workflows/dynamic-matrix.yaml
@@ -21,7 +21,7 @@ jobs:
         id: step-2
       - run: |
           echo '${{ steps.step-1.outputs.step-output }}'
-          echo '${{ steps.step-2.outputs.step-output }}' > 
+          echo '${{ steps.step-2.outputs.step-output }}'
 
   node-matrix:
     strategy:
