--- a/.github/workflows/dynamic-matrix.yaml
+++ b/.github/workflows/dynamic-matrix.yaml
@@ -6,7 +6,7 @@ on:
         description: Operating Systems
         default: "windows-latest,ubuntu-latest"
         type: string
-      node: 
+      node-version: 
         description: Node.js versions
         default: "14,15,16"
         type: string
@@ -15,6 +15,13 @@ jobs:
   prepare-matrix:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/github-script@v6
+        id: matrix-arrays
+        with: 
+          script: "return { os: context.payload.inputs.os.split(',').map(os => os.trim()),
+           node-version: context.payload.inputs.node-version.split(',').map(node-version => node-version.trim()) }"
+          result-encoding: json
+      - run: echo '${{ steps.matrix-arrays.outputs.result}}'
       - run: echo "step-output=value" >> $GITHUB_OUTPUT
         id: step-1
       - run: echo "step-output=value 2" >> $GITHUB_OUTPUT
