--- a/.github/workflows/dynamic-matrix.yaml
+++ b/.github/workflows/dynamic-matrix.yaml
@@ -18,8 +18,8 @@ jobs:
       - uses: actions/github-script@v6
         id: matrix-arrays
         with: 
-          script: "return { os: context.payload.inputs.os.split(',').map(os => os.trim()),
-           node-version: context.payload.inputs.node-version.split(',').map(node-version => node-version.trim()) }"
+          script: "return { os: context.payload.inputs['os'].split(',').map(os => os.trim()),
+           node-version: context.payload.inputs['node-version'].split(',').map(node-version => node-version.trim()) }"
           result-encoding: json
       - run: echo '${{ steps.matrix-arrays.outputs.result}}'
       - run: echo "step-output=value" >> $GITHUB_OUTPUT
