--- a/.github/workflows/dynamic-matrix.yaml
+++ b/.github/workflows/dynamic-matrix.yaml
@@ -14,6 +14,8 @@ on:
 jobs:
   prepare-matrix:
     runs-on: ubuntu-latest
+    outputs:
+      matrix-arrays: ${{ steps.matrix-arrays.outputs.result }} 
     steps:
       - uses: actions/github-script@v6
         id: matrix-arrays
@@ -31,10 +33,11 @@ jobs:
           echo '${{ steps.step-2.outputs.step-output }}'
 
   node-matrix:
+    needs: prepare-matrix
     strategy:
       matrix:
-        node-version: [14, 15 ,16]
-        os: [windows-latest,ubuntu-latest]       
+        node-version: ${{ needs.prepare-matrix.outputs.matrix-arrays['node-version'] }}
+        os: ${{ needs.prepare-matrix.outputs.matrix-arrays['node-version']}}    
      
     runs-on: ${{ matrix.os }}
     steps:     
