--- a/.github/workflows/concurrency-2.yaml
+++ b/.github/workflows/concurrency-2.yaml
@@ -7,6 +7,10 @@ on:
         type: environment
         required: true
 
+concurrency: 
+  group: ${{ github.event.inputs.environment}}
+  cancel-in-progress: true
+
 jobs:
   sleep:
     runs-on: ubuntu-latest
