--- a/.github/workflows/concurrency-2.yaml
+++ b/.github/workflows/concurrency-2.yaml
@@ -8,7 +8,7 @@ on:
         required: true
 
 concurrency: 
-  group: ${{ github.event.inputs.environment}}
+  group: ${{ github.workflow }}-${{ github.event.inputs.environment }}
   cancel-in-progress: true
 
 jobs:
