--- a/.github/workflows/use-reusable.yaml
+++ b/.github/workflows/use-reusable.yaml
@@ -15,4 +15,14 @@ jobs:
       name: ${{ inputs.name}}
     secrets: 
       access-token: ${{ secrets.ACCESS_TOKEN }}
+  
+  calling-reusable-workflow-in-repo:
+    uses: ./.github/workflows/reusable-workflow.yaml
+  
+  using-reusable-wf-output:
+    runs-on: ubuntu-latest
+    needs: calling-reusable-workflow-in-repo
+    steps:
+      - run: echo ${{ needs.calling-reusable-workflow-in-repo.outputs.date }}
+    
 
